--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -29,10 +29,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a class="page-scroll" href="#main">Product</a></li>
-            <li><a class="page-scroll" href="#features">Features</a></li>
-            <li><a class="page-scroll" href="#review-section">Reviews</a></li>
-            <li><a class="page-scroll" href="#pricing">Pricing</a></li>
+            <li><a class="page-scroll" href="#main">Acceuil</a></li>
+            <li><a class="page-scroll" href="#features">Projet</a></li>
+            <li><a class="page-scroll" href="#review-section">Equipe</a></li>
+            <li><a class="page-scroll" href="#pricing"> ??? </a></li>
             <li><a class="page-scroll" href="#contact">Contact</a></li>
           </ul>
         </div>
