--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -32,7 +32,7 @@
             <li><a class="page-scroll" href="#main">Acceuil</a></li>
             <li><a class="page-scroll" href="#features">Projet</a></li>
             <li><a class="page-scroll" href="#review-section">Equipe</a></li>
-            <li><a class="page-scroll" href="#pricing"> ??? </a></li>
+            <li><a class="page-scroll" href="#pricing"> autre </a></li>
             <li><a class="page-scroll" href="#contact">Contact</a></li>
           </ul>
         </div>
