--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -45,12 +45,11 @@
   <div class="main app form" id="main"><!-- Main Section-->
     <div class="hero-section">
       <div class="container nopadding">
-        <div class="col-md-5"> <img class="img-responsive wow fadeInUp" data-wow-delay="0.1s" src="images/app-signup.png" alt="App" /> </div>
+        <div class="col-md-5"> <img class="img-responsive wow fadeInUp" data-wow-delay="0.1s" src="images/audd.png" alt="App" /> </div>
         <div class="col-md-7">
           <div class="hero-content">
-            <h1 class="wow fadeInUp" data-wow-delay="0.1s">Landing Page for Apple Watch</h1>
-            <p class="wow fadeInUp" data-wow-delay="0.2s"> Beoplay A1 bluetooth speakers image on the left is owned by Bang and Olufsen and is released under creative
-              commons lisence. </p>
+            <h1 class="wow fadeInUp" data-wow-delay="0.1s">AuDD site web </h1>
+            <p class="wow fadeInUp" data-wow-delay="0.2s"> AuDD site web vitrine pour le cours projet entreprise EPHEC 3TI. </p>
             <div class="sub-form wow fadeInUp" data-wow-delay="0.3s">
               <form class="subscribe-form wow zoomIn" action="php/subscribe.php" method="post" name="subscribeform" id="subscribeform">
               <input class="mail" type="email" name="email" placeholder="Join the wait list" autocomplete="off" id="subemail">
