--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -5,8 +5,8 @@
 <title>AuDD</title>
 <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="iLand Multipurpose Landing Page Template">
-<meta name="keywords" content="iLand HTML Template, iLand Landing Page, Landing Page Template">
+<meta name="description" content="AuDD">
+<meta name="keywords" content="AuDD">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
 <link href="https://fonts.googleapis.com/css?family=Open%20Sans:300,400,500,600,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="css/animate.css">
@@ -25,7 +25,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-          <a class="navbar-brand page-scroll" href="#main"><img src="images/logo.png" width="80" height="30" alt="iLand" /></a> </div>
+          <a class="navbar-brand page-scroll" href="#main"><img src="images/Odd.PNG" width="80" height="30" alt="iLand" /></a> </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
