--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -45,7 +45,7 @@
   <div class="main app form" id="main"><!-- Main Section-->
     <div class="hero-section">
       <div class="container nopadding">
-        <div class="col-md-5"> <img class="img-responsive wow fadeInUp" data-wow-delay="0.1s" src="images/audd.png" alt="App" /> </div>
+        <div class="col-md-5"> <img class="img-responsive wow fadeInUp" data-wow-delay="0.1s" src="images/imageAuDD.png" alt="App" /> </div>
         <div class="col-md-7">
           <div class="hero-content">
             <h1 class="wow fadeInUp" data-wow-delay="0.1s">AuDD site web </h1>
