--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>AuDD</title>
-<link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
+<link rel="icon" href="images/imageAuDD2.png" type="image/png" sizes="16x16">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="AuDD">
 <meta name="keywords" content="AuDD">
@@ -68,12 +68,12 @@
     <div class="client-section">
       <div class="container text-center">
         <div class="clients owl-carousel owl-theme">
-          <div class="single"> <img src="images/client1.png" alt="Image" /> </div>
-          <div class="single"> <img src="images/client2.png" alt="Image" /> </div>
-          <div class="single"> <img src="images/client3.png" alt="Image" /> </div>
-          <div class="single"> <img src="images/client1.png" alt="Image" /> </div>
-          <div class="single"> <img src="images/client2.png" alt="Image" /> </div>
-          <div class="single"> <img src="images/client3.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
         </div>
       </div>
     </div>
