--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -48,7 +48,7 @@
         <div class="col-md-5"> <img class="img-responsive wow fadeInUp" data-wow-delay="0.1s" src="images/imageAuDD.png" alt="App" /> </div>
         <div class="col-md-7">
           <div class="hero-content">
-            <h1 class="wow fadeInUp" data-wow-delay="0.1s">       AuDD site web </h1>
+            <h1 class="wow fadeInUp" data-wow-delay="0.1s">AuDD site web </h1>
             <p class="wow fadeInUp" data-wow-delay="0.2s"> AuDD site web vitrine pour le cours projet entreprise EPHEC 3TI. </p>
             
           </div>
@@ -60,12 +60,12 @@
     <div class="client-section">
       <div class="container text-center">
         <div class="clients owl-carousel owl-theme">
-          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
-          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
-          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
-          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
-          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
-          <div class="single"> <img src="images/imageAuDD1.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDDnoir.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDDnoir.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDDnoir.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDDnoir.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDDnoir.png" alt="Image" /> </div>
+          <div class="single"> <img src="images/imageAuDDnoir.png" alt="Image" /> </div>
         </div>
       </div>
     </div>
@@ -97,7 +97,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 wow fadeInDown" data-wow-delay="0.5s"> <img class="img-responsive" src="images/iPhone-app.png" alt="App" /> </div>
+        <div class="col-md-4 wow fadeInDown" data-wow-delay="0.5s"> <img class="img-responsive" src="images/imageAuDD3.png" alt="App" /> </div>
         <div class="col-md-4 features-left">
           <div class="col-md-12 wow fadeInDown" data-wow-delay="0.6s">
             <div class="icon"> <i class="ion-ios-cloud-download-outline"></i> </div>
