--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -71,53 +71,53 @@
     </div>
     <div class="app-features text-center" id="features">
       <div class="container">
-        <h1 class="wow fadeInDown" data-wow-delay="0.1s">Features & Overviews</h1>
-        <p class="wow fadeInDown" data-wow-delay="0.2s"> Aliquam sagittis ligula et sem lacinia, ut facilisis enim sollicitudin. Proin nisi est,<br class="hidden-xs">
-          convallis nec purus vitae, iaculis posuere sapien. </p>
+        <h1 class="wow fadeInDown" data-wow-delay="0.1s">Vue globale du Projet</h1>
+        <p class="wow fadeInDown" data-wow-delay="0.2s"> Ensemble des services proposés par AuDD, 
+          formations en langue et informatique disponible pour tous</p>
         <div class="col-md-4 features-left">
           <div class="col-md-12 wow fadeInDown" data-wow-delay="0.2s">
             <div class="icon"> <i class="ion-ios-analytics-outline"></i> </div>
             <div class="feature-single">
-              <h1>Lorem Ipsum</h1>
-              <p> Some lorem contetnt to fill the gap and make it look clean and organized. </p>
+              <h1>Suivi constant</h1>
+              <p> Tout au long de votre formation un professeur suivra votre avancée. </p>
             </div>
           </div>
           <div class="col-md-12 wow fadeInDown" data-wow-delay="0.3s">
             <div class="icon"> <i class="ion-ios-briefcase-outline"></i> </div>
             <div class="feature-single">
-              <h1>Lorem Ipsum</h1>
-              <p> Some lorem contetnt to fill the gap and make it look clean and organized. </p>
+              <h1>Ouverture au monde professionnel</h1>
+              <p> Nos formations vous fourniront toutes les compétences requises afin de travailler dans un milieu d'entreprise. </p>
             </div>
           </div>
           <div class="col-md-12 wow fadeInDown" data-wow-delay="0.4s">
             <div class="icon"> <i class="ion-ios-chatboxes-outline"></i> </div>
             <div class="feature-single">
-              <h1>Lorem Ipsum</h1>
-              <p> Some lorem contetnt to fill the gap and make it look clean and organized. </p>
+              <h1>Communication</h1>
+              <p> Intéraction possible avec des professionnels du domaine en question. </p>
             </div>
           </div>
         </div>
-        <div class="col-md-4 wow fadeInDown" data-wow-delay="0.5s"> <img class="img-responsive" src="images/im.png" alt="App" /> </div>
+        <div class="col-md-4 wow fadeInDown" data-wow-delay="0.5s"> <img class="img-responsive" src="images/imageAuDD3.png" alt="App" /> </div>
         <div class="col-md-4 features-left">
           <div class="col-md-12 wow fadeInDown" data-wow-delay="0.6s">
             <div class="icon"> <i class="ion-ios-cloud-download-outline"></i> </div>
             <div class="feature-single">
-              <h1>Lorem Ipsum</h1>
-              <p> Some lorem contetnt to fill the gap and make it look clean and organized. </p>
+              <h1>Cours Téléchargeable</h1>
+              <p> Toute les formations sont téléchargeable afin de pouvoir vous améliorez ou que vous soyez. </p>
             </div>
           </div>
           <div class="col-md-12 wow fadeInDown" data-wow-delay="0.7s">
             <div class="icon"> <i class="ion-ios-copy-outline"></i> </div>
             <div class="feature-single">
-              <h1>Lorem Ipsum</h1>
-              <p> Some lorem contetnt to fill the gap and make it look clean and organized. </p>
+              <h1>Formations en ligne</h1>
+              <p> Nos formations sont disponibles en format PDF afin que vous puissiez échangez vos correctifs avec d'autres participants. </p>
             </div>
           </div>
           <div class="col-md-12 wow fadeInDown" data-wow-delay="0.8s">
             <div class="icon"> <i class="ion-ios-game-controller-b-outline"></i> </div>
             <div class="feature-single">
-              <h1>Lorem Ipsum</h1>
-              <p> Some lorem contetnt to fill the gap and make it look clean and organized. </p>
+              <h1>Apprentisage divertissant</h1>
+              <p>Approche unique de l'apprentissage via des quizzs et des mini-jeux. </p>
             </div>
           </div>
         </div>
