--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -130,12 +130,12 @@
       <div class="col-md-6 nopadding">
         <div class="split-content">
           <h1 class="wow fadeInUp">Formation en ligne : Informatique</h1>
-          <p class="wow fadeInUp"> Pellentesque eget dolor gravida, tempus purus ac, ultricies mauris. Etiam est nisl, molestie sed egestas bibendum, varius eu diam. Suspendisse est metus, ultrices sit amet dolor in, rhoncus malesuada mi.</p>
+          <p class="wow fadeInUp"> Nous proposons des formations sur le développement applicatif et web dans différents langages de programmation.</p>
           <ul class="wow fadeInUp">
-            <li>Nulla ornare purus non consequat ultricies.</li>
-            <li>Etiam est nisl, molestie sed egestas bibendum</li>
-            <li>Aliquam vel euismod elit, sed suscipit est.</li>
-            <li>Curabitur egestas justo neque viverra vel. </li>
+            <li>Développement web.</li>
+            <li>Développement applicatif.</li>
+            <li>Développement application mobile.</li>
+            <li>Formation sécurité réseau. </li>
           </ul>
         </div>
       </div>
@@ -147,12 +147,12 @@
       <div class="col-md-6 nopadding">
         <div class="split-content second">
           <h1 class="wow fadeInUp">Formation en ligne : Langue</h1>
-          <p class="wow fadeInUp"> Pellentesque eget dolor gravida, tempus purus ac, ultricies mauris. Etiam est nisl, molestie sed egestas bibendum, varius eu diam. Suspendisse est metus, ultrices sit amet dolor in, rhoncus malesuada mi.</p>
+          <p class="wow fadeInUp"> Nous proposons des formations dans différentes langues pour vous permettre de développer vos compétances</p>
           <ul class="wow fadeInUp">
-            <li>Nulla ornare purus non consequat ultricies.</li>
-            <li>Etiam est nisl, molestie sed egestas bibendum</li>
-            <li>Aliquam vel euismod elit, sed suscipit est.</li>
-            <li>Curabitur egestas justo neque viverra vel. </li>
+            <li>Anglais.</li>
+            <li>Allemand</li>
+            <li>Espognol.</li>
+            <li>Russe. </li>
           </ul>
         </div>
       </div>
@@ -168,37 +168,142 @@
           <div class="reviews owl-carousel owl-theme">
             <div class="review-single"><img class="img-circle" src="images/customer1.png" alt="Client Testimonoal" />
               <div class="review-text wow fadeInUp" data-wow-delay="0.2s">
-                <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                <h3>Johnathan Doe</h3>
-                <h3>Marketing Head Matrix media</h3>
+                <p></p>
+                <h3>- CAMPOS CASARES Melvin</h3>
+                <h3>Chef de projet + porte parole</h3>
               </div>
             </div>
             <div class="review-single"><img class="img-circle" src="images/customer2.png" alt="Client Testimonoal" />
               <div class="review-text">
-                <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                <h3>Oidila Matik</h3>
-                <h3>President Lexo Inc</h3>
+                  <p></p>
+                <h3>- AIRES David</h3>
+                <h3>Responsable sécurité réseau</h3>
               </div>
             </div>
             <div class="review-single"><img class="img-circle" src="images/customer3.png" alt="Client Testimonoal" />
               <div class="review-text">
-                <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                <h3>- Alex Dattilo</h3>
-                <h3>CEO Optima Inc</h3>
+                  <p></p>
+                <h3>- NDAMTANG Manuelle Stevia</h3>
+                <h3>Service mail + ressource informatique</h3>
               </div>
             </div>
             <div class="review-single"><img class="img-circle" src="images/customer4.png" alt="Client Testimonoal" />
               <div class="review-text">
-                <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                <h3>- Robert Hammer</h3>
-                <h3>design head Omega Corp</h3>
+                  <p></p>
+                <h3>- CONDE Ibrahima</h3>
+                <h3>Sécurité physique</h3>
               </div>
             </div>
             <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
               <div class="review-text">
-                <p>Morbi eget dictum enim. Praesent sed quam sit amet lorem tempor rhoncus. <br>In hac habitasse platea dictumst. Vivamus in accumsan ex</p>
-                <h3>- Rita Valentine</h3>
-                <h3>CEO Behena digital</h3>
+                  <p></p>
+                <h3>- LEFÈVRE Alexandre</h3>
+                <h3>Développement web</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- Gilles Timothy</h3>
+                <h3>Développement web</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- PESTIAUX Tristan</h3>
+                <h3>Wifi</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- SAILLEZ Brieuc</h3>
+                <h3>Administrateur réseau</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- VIROUX Nicolas</h3>
+                <h3>Infrastructure réseau</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- CORNIL Jean</h3>
+                <h3>Responsable rangement</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- BOUSSAKLATAN Hymed</h3>
+                <h3>Service déployement</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- CHELLÉ Adrien</h3>
+                <h3>Scrible</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- LEBRUN Quentin</h3>
+                <h3>Sécurité réseau</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- HENRY Nathan</h3>
+                <h3>Service déployement</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- GASSMANN Mathias</h3>
+                <h3>Administrateur réseau</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- VAN DEN DORPE Ludo</h3>
+                <h3>Wifi</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- SHATSKIY Filipp</h3>
+                <h3>Infrastructure réseau</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- HANQUET Brian</h3>
+                <h3>Wifi</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- HERMANT Thibaut</h3>
+                <h3>Wifi</h3>
+              </div>
+            </div>
+            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+              <div class="review-text">
+                  <p></p>
+                <h3>- MIESSE Clément</h3>
+                <h3>Assistant chef de projet</h3>
               </div>
             </div>
           </div>
