--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -180,7 +180,7 @@
                 <h3>Responsable sécurité réseau</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer3.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/manuella.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- NDAMTANG Manuelle Stevia</h3>
@@ -194,7 +194,7 @@
                 <h3>Sécurité physique</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/aleexx.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- LEFÈVRE Alexandre</h3>
@@ -215,7 +215,7 @@
                 <h3>Wifi</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/tristan.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- SAILLEZ Brieuc</h3>
@@ -229,7 +229,7 @@
                 <h3>Infrastructure réseau</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/jean.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- CORNIL Jean</h3>
@@ -243,7 +243,7 @@
                 <h3>Service déployement</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/adrien.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- CHELLÉ Adrien</h3>
@@ -257,7 +257,7 @@
                 <h3>Sécurité réseau</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/nathan.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- HENRY Nathan</h3>
@@ -271,7 +271,7 @@
                 <h3>Administrateur réseau</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/ludo.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- VAN DEN DORPE Ludo</h3>
@@ -285,7 +285,7 @@
                 <h3>Infrastructure réseau</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/brian.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- HANQUET Brian</h3>
@@ -299,7 +299,7 @@
                 <h3>Wifi</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/clement.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- MIESSE Clément</h3>
