--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -166,14 +166,14 @@
       <div class="container">
         <div class="col-md-10 col-md-offset-1">
           <div class="reviews owl-carousel owl-theme">
-            <div class="review-single"><img class="img-circle" src="images/customer1.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/melvin.jpg" alt="Client Testimonoal" />
               <div class="review-text wow fadeInUp" data-wow-delay="0.2s">
                 <p></p>
                 <h3>- CAMPOS CASARES Melvin</h3>
                 <h3>Chef de projet + porte parole</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer2.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/david.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- AIRES David</h3>
@@ -187,7 +187,7 @@
                 <h3>Service mail + ressource informatique</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer4.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/ibra.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- CONDE Ibrahima</h3>
@@ -201,7 +201,7 @@
                 <h3>Développement web</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/timothy.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- Gilles Timothy</h3>
@@ -215,14 +215,14 @@
                 <h3>Wifi</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/brieuc.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- SAILLEZ Brieuc</h3>
                 <h3>Administrateur réseau</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/nicolas.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- VIROUX Nicolas</h3>
@@ -236,7 +236,7 @@
                 <h3>Responsable rangement</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/hymed.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- BOUSSAKLATAN Hymed</h3>
@@ -250,7 +250,7 @@
                 <h3>Scrible</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/quentin.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- LEBRUN Quentin</h3>
@@ -264,7 +264,7 @@
                 <h3>Service déployement</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/mathias.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- GASSMANN Mathias</h3>
@@ -278,21 +278,21 @@
                 <h3>Wifi</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/filip.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- SHATSKIY Filipp</h3>
                 <h3>Infrastructure réseau</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/brian.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- HANQUET Brian</h3>
                 <h3>Wifi</h3>
               </div>
             </div>
-            <div class="review-single"><img class="img-circle" src="images/customer5.png" alt="Client Testimonoal" />
+            <div class="review-single"><img class="img-circle" src="images/thibault.jpg" alt="Client Testimonoal" />
               <div class="review-text">
                   <p></p>
                 <h3>- HERMANT Thibaut</h3>
