--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -132,10 +132,10 @@
           <h1 class="wow fadeInUp">Formation en ligne : Informatique</h1>
           <p class="wow fadeInUp"> Nous proposons des formations sur le développement applicatif et web dans différents langages de programmation.</p>
           <ul class="wow fadeInUp">
-            <li>Développement web.</li>
-            <li>Développement applicatif.</li>
-            <li>Développement application mobile.</li>
-            <li>Formation sécurité réseau. </li>
+            <li>Développement web</li>
+            <li>Développement applicatif</li>
+            <li>Développement application mobile</li>
+            <li>Formation sécurité réseau</li>
           </ul>
         </div>
       </div>
@@ -147,12 +147,12 @@
       <div class="col-md-6 nopadding">
         <div class="split-content second">
           <h1 class="wow fadeInUp">Formation en ligne : Langue</h1>
-          <p class="wow fadeInUp"> Nous proposons des formations dans différentes langues pour vous permettre de développer vos compétances</p>
+          <p class="wow fadeInUp"> Nous proposons des formations dans différentes langues pour vous permettre de développer vos compétences</p>
           <ul class="wow fadeInUp">
-            <li>Anglais.</li>
+            <li>Anglais</li>
             <li>Allemand</li>
-            <li>Espognol.</li>
-            <li>Russe. </li>
+            <li>Espagnol</li>
+            <li>Russe </li>
           </ul>
         </div>
       </div>
