--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -394,17 +394,16 @@
     <div class="footer">
       <div class="container">
         <div class="col-md-7"> <img src="images/Odd.PNG" width="80" height="30" alt="Image" />
-          <p> Lorem ipsum dolor sit. Incidunt laborum beatae earum nihil odio consequatur officiis
-tempore consequuntur officia ducimus unde doloribus quod unt repell  </p>
+          <p> AuDD est une platteforme d'apprentissage qui a pour objectif le développement de vos connaissance en informatique et en langues.  </p>
           <div class="footer-text">
-            <p> Copyright © 2016 iLand. All Rights Reserved. Made with <i class="ion-heart"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
+            <p> Copyright © 2020 AuDD. All Rights Reserved. Made with <i class="ion-heart"></i> by <a href="http://www.designstub.com/"><a>des bros</a></p>
           </div>
         </div>
         <div class="col-md-5">
-            <h1>Contact Us</h1>
-            <p> Contact our 24/7 customer support if you have any <br class="hidden-xs">
-              questions. We'll help you out. </p>
-            <a href="mailto:support@gmail.com">contact@iland.com</a> </div>
+            <h1>Contacter Nous</h1>
+            <p> Contacter notre support consommateur 24/7 si vous avez des questions<br class="hidden-xs">
+              Nous vous aiderons avec plaisir. </p>
+            <a href="mailto:support@gmail.com">contact@audd.com</a> </div>
         </div>
       </div>
     </div>
