--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -342,7 +342,7 @@
               
                 <ul>
                   <li>- 1 Mois de formation</li>
-                  <li>- 4 langues : Anglais,Français,Espagnol et Allemand</li>
+                  <li>- 4 langues : Anglais,Russe,Espagnol et Allemand</li>
                   <li>- 3 Test corrigés par semaine</li>
                   <li>- Plus de 100 exercices ainsi que leur correctifs</li>
                 </ul>
