--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -394,7 +394,7 @@
     <div class="footer">
       <div class="container">
         <div class="col-md-7"> <img src="images/Odd.PNG" width="80" height="30" alt="Image" />
-          <p> AuDD est une platteforme d'apprentissage qui a pour objectif le développement de vos connaissance en informatique et en langues.  </p>
+          <p> AuDD est une plateforme d'apprentissage qui a pour objectif le développement de vos connaissance en informatique et en langue.  </p>
           <div class="footer-text">
             <p> Copyright © 2020 AuDD. All Rights Reserved. Made with <i class="ion-heart"></i> by <a href="http://www.designstub.com/"><a>des bros</a></p>
           </div>
