--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -394,7 +394,7 @@
         </div>
         <div class="col-md-5">
             <h1>Contactez Nous</h1>
-            <p> Contactez notre support consommateur 24/7 si vous avez des questions<br class="hidden-xs">
+            <p> Contactez notre support client 24/7 si vous avez des questions<br class="hidden-xs">
               Nous vous aiderons avec plaisir. </p>
             <a href="mailto:support@gmail.com">contact@audd.com</a> </div>
         </div>
