--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -344,7 +344,7 @@
 
                 <ul>
                   <li>- 1 Mois de formation</li>
-                  <li>- 4 langues : Anglais,Russe,Espagnol et Allemand</li>
+                  <li>- 6 langues : Anglais,Russe,Espagnol,Allemand,Chinois et Coréen</li>
                   <li>- 3 Test corrigés par semaine</li>
                   <li>- Plus de 100 exercices ainsi que leur correctifs</li>
                 </ul>
