--- a/web/AuDD/index.html
+++ b/web/AuDD/index.html
@@ -386,7 +386,7 @@
     </div>
 
     <!-- Footer Section -->
-    <div class="footer">
+    <div id="contact" class="footer">
       <div class="container">
         <div class="col-md-7"> <img src="images/Odd.PNG" width="80" height="30" alt="Image" />
           <p> AuDD est une plateforme d'apprentissage qui a pour objectif le développement de vos connaissances en informatique et en langue.  </p>
